--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,8 @@
-<h1>All Lists</h1>
-
-<ul>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
-</ul>
+<div class="container mt-5">
+  <h1>Lists#index</h1>
+  <ol>
+    <% @lists.each do |list| %>
+      <li><%= link_to list.name, list_path(list) %></li>
+    <% end %>
+  </ol>
+</div>
